[package]
name = "leveldb"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam = "0.8.4"
crossbeam-utils = "0.8.20"
crossbeam-channel = "0.4.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
quick-error = "2.0.1"
slog = "2.5.2"
slog-async = "2.4.0"
slog-term = "2.5.0"
log = "0.4.6"
bytes = "1.8.0"
